# Claude-Code-App

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  task_manager.py
tests/: test_task_manager.py
